objects/Simple_Log__c/Simple_Log__c.object-meta.xml
<CustomObject>
    <label>Simple Log</label>
    <nameField>
        <label>Log Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simple Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>