objects/Simple_Log__c/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>