objects/Simple_Log__c/fields/has_error__c.field-meta.xml
<CustomField>
    <fullName>has_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has error</label>
    <type>Checkbox</type>
</CustomField>