objects/Simple_Log__c/fields/trace_log__c.field-meta.xml
<CustomField>
    <fullName>trace_log__c</fullName>
    <label>trace log</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>