objects/Simple_Log__c/fields/user_name__c.field-meta.xml
<CustomField>
    <fullName>user_name__c</fullName>
    <label>user name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>